@@ -11301,6 +11301,373 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|testAdvanceSingleDeletedParentNoChild
+specifier|public
+name|void
+name|testAdvanceSingleDeletedParentNoChild
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+specifier|final
+name|RandomIndexWriter
+name|w
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|dir
+argument_list|)
+decl_stmt|;
+comment|// First doc with 1 children
+name|Document
+name|parentDoc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|parentDoc
+operator|.
+name|add
+argument_list|(
+name|newStringField
+argument_list|(
+literal|"parent"
+argument_list|,
+literal|"1"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|parentDoc
+operator|.
+name|add
+argument_list|(
+name|newStringField
+argument_list|(
+literal|"isparent"
+argument_list|,
+literal|"yes"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Document
+name|childDoc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|childDoc
+operator|.
+name|add
+argument_list|(
+name|newStringField
+argument_list|(
+literal|"child"
+argument_list|,
+literal|"1"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|addDocuments
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|childDoc
+argument_list|,
+name|parentDoc
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|parentDoc
+operator|=
+operator|new
+name|Document
+argument_list|()
+expr_stmt|;
+name|parentDoc
+operator|.
+name|add
+argument_list|(
+name|newStringField
+argument_list|(
+literal|"parent"
+argument_list|,
+literal|"2"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|parentDoc
+operator|.
+name|add
+argument_list|(
+name|newStringField
+argument_list|(
+literal|"isparent"
+argument_list|,
+literal|"yes"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|addDocuments
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|parentDoc
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|deleteDocuments
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"parent"
+argument_list|,
+literal|"2"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|parentDoc
+operator|=
+operator|new
+name|Document
+argument_list|()
+expr_stmt|;
+name|parentDoc
+operator|.
+name|add
+argument_list|(
+name|newStringField
+argument_list|(
+literal|"parent"
+argument_list|,
+literal|"2"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|parentDoc
+operator|.
+name|add
+argument_list|(
+name|newStringField
+argument_list|(
+literal|"isparent"
+argument_list|,
+literal|"yes"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|childDoc
+operator|=
+operator|new
+name|Document
+argument_list|()
+expr_stmt|;
+name|childDoc
+operator|.
+name|add
+argument_list|(
+name|newStringField
+argument_list|(
+literal|"child"
+argument_list|,
+literal|"2"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|addDocuments
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|childDoc
+argument_list|,
+name|parentDoc
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|IndexReader
+name|r
+init|=
+name|w
+operator|.
+name|getReader
+argument_list|()
+decl_stmt|;
+name|w
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|IndexSearcher
+name|s
+init|=
+name|newSearcher
+argument_list|(
+name|r
+argument_list|)
+decl_stmt|;
+comment|// Create a filter that defines "parent" documents in the index - in this case resumes
+name|Filter
+name|parentsFilter
+init|=
+operator|new
+name|FixedBitSetCachingWrapperFilter
+argument_list|(
+operator|new
+name|QueryWrapperFilter
+argument_list|(
+operator|new
+name|TermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"isparent"
+argument_list|,
+literal|"yes"
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|Query
+name|parentQuery
+init|=
+operator|new
+name|TermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"parent"
+argument_list|,
+literal|"2"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|ToChildBlockJoinQuery
+name|parentJoinQuery
+init|=
+operator|new
+name|ToChildBlockJoinQuery
+argument_list|(
+name|parentQuery
+argument_list|,
+name|parentsFilter
+argument_list|,
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|TopDocs
+name|topdocs
+init|=
+name|s
+operator|.
+name|search
+argument_list|(
+name|parentJoinQuery
+argument_list|,
+literal|3
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|topdocs
+operator|.
+name|totalHits
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 end_class
 
